# Metal_SDR

./: .gitignore  README.md  fm_repeatability_test.ipynb  pyproject.toml  scan.csv  validate_freq.ipynb
data/captures/: capture_manifest.db
docs/: PIPELINE.md  REFACTOR_PLAN.md  USAGE.md
notebook/: README.md
notebooks/: README.md  analysis.ipynb  fm_repeatability_test.ipynb  foundation_analysis.ipynb  visualize_fingerprints.ipynb
scripts/: analyze_captures.py  analyze_kuzu.py  batch_capture.py  capture_rtl_real.py  capture_sigmf.py  config.py  duckdb_logger.py  models.py  quick_capture.py  setup_manifest.py  sqlite_logger.py  sync_manifest.sh
scripts/capture/: batch_capture.py  capture_blade.py  capture_manager.py  capture_rtl_real.py  capture_sigmf.py  quick_capture.py
scripts/capture/backends/: __init__.py  bladerf.py  rtl_sdr.py
scripts/cognitive/: dynamic_access.py
scripts/database/: sqlite_logger.py
scripts/fingerprinting/: README.md  base_fingerprint.py  fm_fingerprint.py  lte_fingerprint.py  process_fingerprints.py
scripts/utils/: analyze_captures.py  config.py  models.py
tests/: README.md  __init__.py  test_bladerf_capture.py  test_fm_fingerprint.py
